Set scala version to 2.11 in pants.ini

--- a/src/jvm/com/mockingbird/BUILD
+++ b/src/jvm/com/mockingbird/BUILD
@@ -19,7 +19,7 @@ jvm_binary(
 
 scala_library(
   name = 'lib',
-  sources = globs('*.scala'),
+  sources = ['Main.scala'],
   dependencies = [
     '3rdparty/jvm/com/github/finagle:finch-core'
   ]
