--- a/pants.ini
+++ b/pants.ini
@@ -2,7 +2,7 @@
 jvm_options: ["-Xmx1g", "-Dfile.encoding=UTF8"]
 
 [GLOBAL]
-pants_version: 1.2.0
+pants_version: 1.3.0.dev12
 
 [scala-platform]
 version: 2.11
