Add golang 3rdparty dir and bump finch lib version

--- a/src/jvm/mockingbird/BUILD
+++ b/src/jvm/mockingbird/BUILD
@@ -17,6 +17,6 @@ scala_library(
   name = 'lib',
   sources = ['Api.scala'],
   dependencies = [
-    '3rdparty/jvm/com/github/finagle:finch-core'
+    '3rdparty/jvm:finch-core'
   ]
 )
