--- a/3rdparty/jvm/BUILD
+++ b/3rdparty/jvm/BUILD
@@ -1,6 +1,20 @@
 jar_library(
+  name='avro',
+  jars=[
+    jar(org='org.apache.avro', name='avro', rev='1.8.1')
+  ]
+)
+
+jar_library(
   name='finch-core',
   jars=[
     scala_jar(org='com.github.finagle', name='finch-core', rev='0.13.0')
+  ]
+)
+
+jar_library(
+  name='finch-circe',
+  jars=[
+    scala_jar(org='com.github.finagle', name='finch-circe', rev='0.13.0')
   ]
 )
