--- a/pants.ini
+++ b/pants.ini
@@ -6,3 +6,19 @@ pants_version: 1.3.0.dev12
 
 [scala-platform]
 version: 2.11
+
+[jvm-platform]
+default_platform: java8
+platforms: {
+    'java8': {'source': '8', 'target': '8', 'args': [] },
+  }
+
+[compile.zinc]
+# pass options with '-S' prefix to scalac
+args: [
+    '-S-encoding',
+    '-SUTF-8',
+    "-S-language:existentials",
+    "-S-language:higherKinds",
+    "-S-language:implicitConversions",
+  ]
