Add scalafmt configuration (#5)

--- a/pants.ini
+++ b/pants.ini
@@ -22,3 +22,9 @@ args: [
     "-S-language:higherKinds",
     "-S-language:implicitConversions",
   ]
+
+[compile.scalafmt]
+configuration: %(pants_supportdir)s/scalafmt/config
+
+[fmt.scalafmt]
+configuration: %(pants_supportdir)s/scalafmt/config
