Add shapeless dep

--- a/src/jvm/mockingbird/BUILD
+++ b/src/jvm/mockingbird/BUILD
@@ -19,6 +19,7 @@ scala_library(
     '3rdparty/jvm:avro',
     '3rdparty/jvm:circe-generic',
     '3rdparty/jvm:finch-circe',
-    '3rdparty/jvm:finch-core'
+    '3rdparty/jvm:finch-core',
+    '3rdparty/jvm:shapeless'
   ]
 )
