--- a/src/jvm/mockingbird/BUILD
+++ b/src/jvm/mockingbird/BUILD
@@ -21,6 +21,7 @@ scala_library(
     '3rdparty/jvm:circe-generic',
     '3rdparty/jvm:finch-circe',
     '3rdparty/jvm:finch-core',
-    '3rdparty/jvm:shapeless'
+    '3rdparty/jvm:shapeless',
+    '3rdparty/jvm:twitter-server'
   ]
 )
