--- a/pants.ini
+++ b/pants.ini
@@ -2,7 +2,11 @@
 jvm_options: ["-Xmx1g", "-Dfile.encoding=UTF8"]
 
 [GLOBAL]
-pants_version: 1.3.0.dev12
+pants_version: 1.4.0.dev0
+
+plugins: [
+    'pantsbuild.pants.contrib.go==%(pants_version)s',
+  ]
 
 [scala-platform]
 version: 2.11
